Add select section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,66 @@
         </div>
 
     </section>
+
+    <section class="select">
+        <form id="autoForm" class="autoForm">
+            <div class="row">
+                <div class="col-1-of-3">
+                    <h4>Motor</h4>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="engine" id="engine1600" value="80900" checked>
+                        <label for="engine1600" class="radio">1.6 MPi Petrol</label>
+                    </div>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="engine" id="engine2000" value="95490">
+                        <label for="engine2000" class="radio">2.2 MPi Diesel</label>
+                    </div>
+                </div>
+                
+                <div class="col-1-of-3">
+                    <h4>Transmission</h4>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="transmission" id="transmission6MT" value="85000" checked>
+                        <label for="transmission6MT" class="radio">6-Speed Manual FWD</label>
+                    </div>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="transmission" id="transmission6AT" value="92490">
+                        <label for="transmission6AT" class="radio">6-Speed Automat FWD</label>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <h4>Package</h4>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="package" id="packageActive" value="105000" checked>
+                        <label for="packageActive" class="radio">Venue</label>
+                    </div>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="package" id="packageActivePlus" value="116000">
+                        <label for="packageActivePlus" class="radio">Active</label>
+                    </div>
+                    <div class="form-block">
+                        <input type="radio" class="radio" name="package" id="packageComfott" value="130000">
+                        <label for="packageComfott" class="radio">Elite</label>
+                    </div>
+                </div>
+            </div>
+        </form>
+
+        <div class="colors">
+
+            <h4>Colors</h4>
+            <div id="colorsSelector" class="colorsSelector">
+                <div class="colorItem colorBlack" data-img-path="img/Black.png"></div>
+                <div class="colorItem colorBlue" data-img-path="img/Blue.png"></div>
+                <div class="colorItem colorDenim" data-img-path="img/Denim.png"></div>
+                <div class="colorItem colorGrey" data-img-path="img/Grey.png"></div>
+                <div class="colorItem colorRed" data-img-path="img/Red.png"></div>
+                <div class="colorItem colorSilver" data-img-path="img/Silver.png"></div>
+                <div class="colorItem colorWhite" data-img-path="img/White.png"></div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
