--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
             </div>
         </div>
     </section>
+
+    <footer class="car__footer">
+        <div class="author"><strong>Jonas Niyazson </strong>&#169; Copyright 2024. All rights reserved.</div>
+    </footer>
     
 </body>
 </html>
