Add style.file and scripts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Calc-car</title>
 </head>
 <body>
@@ -102,6 +103,9 @@
     <footer class="car__footer">
         <div class="author"><strong>Jonas Niyazson </strong>&#169; Copyright 2024. All rights reserved.</div>
     </footer>
+
+    <script src="js/jquery/jquery.3.7.1-min.js"></script>
+    <script src="js/main.js"></script>
     
 </body>
 </html>
