--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="author"><strong>Jonas Niyazson </strong>&#169; Copyright 2024. All rights reserved.</div>
     </footer>
 
-    <script src="js/jquery/jquery.3.7.1-min.js"></script>
+    <script src="js/jquery.3.7.1-min.js"></script>
     <script src="js/main.js"></script>
     
 </body>
